UML legend:

table = class
#pkey
+index

@startuml
' uncomment the line below if you're using computer with a retina display
' skinparam dpi 300
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
' we use bold for primary key
' green color for unique
' and underscore for not_null
!define primary_key(x) <b>x</b>
!define unique(x) <color:green>x</color>
!define not_null(x) <u>x</u>
!define foreign_keys(x) <color:gray>x</color>
' other tags available:
' <i></i>
' <back:COLOR></color>, where color is a color name or html color code
' (#FFAACC)
' see: http://plantuml.com/classes.html#More
hide methods
hide stereotypes

' entities
title Stock Management
Table(items, "ITEMS") {
primary_key(item_id) SERIAL
not_null(unique(item_name)) VARCHAR[48]
item_description TEXT
}

Table(deposits, "DEPOSITS") {
primary_key(not_null(depo_id)) SERIAL
foreign_keys(not_null(item_id)) INTEGER
not_null(depo_qty) INTEGER
}

Table(deliveries, "DELIVERIES") {
primary_key(deli_id) INTEGER
not_null(deli_address) VARCHAR[96]
}

Table(deliveries_items, "DELIVERIES_ITEMS\n(Relational Table)") {
primary_key(foreign_keys(deli_id)) INTEGER
primary_key(foreign_keys(item_id)) INTEGER
not_null(qty) INTEGER
}

' relationships
' one-to-one relationship
items --> deposits
items --> deliveries_items
deliveries -- deliveries_items
' one to may relationship
'user --> session : "A user may have\n many sessions"
' many to many relationship
' Add mark if you like
'user "1" --> "*" user_group : "A user may be \nin many groups"
'group "1" --> "0..N" user_group : "A group may \ncontain many users"
@enduml